--- a/public/styles.css
+++ b/public/styles.css
@@ -86,4 +86,11 @@ body {
   display: flex;
   gap: 30px;
   margin-top: 60px;
+
+  margin-bottom: 32px;
+}
+
+button {
+  cursor: pointer;
+  padding: 4px 16px;
 }
