--- a/views/new.ejs
+++ b/views/new.ejs
@@ -4,9 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>this is the new page</h1>
+    <h1>Add new message</h1>
+
+    <form method="post" action="/new">
+      <input type="text" placeholder="name" name="name" />
+      <input type="text" placeholder="message" name="message" />
+
+      <button>Add</button>
+    </form>
   </body>
 </html>
-  
