--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -11,7 +11,7 @@
 
     <h1><%= detailMessage.user %></h1>
     <p><%= detailMessage.text %></p>
-    <p><%= detailMessage.added %></p>
+    <p style="margin-bottom: 40px"><%= detailMessage.added %></p>
 
     <a href="/">
       <button>go back</button>
