--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -9,7 +9,7 @@
   <body>
     <h1>Detail message</h1>
 
-    <h1><%= detailMessage.user %></h1>
+    <h1><%= detailMessage.username %></h1>
     <p><%= detailMessage.text %></p>
     <p style="margin-bottom: 40px">
       <%= detailMessage.added.toLocaleString('en-US', {weekday: "long", year:
